# robot

./: .env.example  .env.robot1.example  .env.robot2.example  .env.robot3.example  .gitignore  AGENTS.md  CORE_FLOW_COVERAGE.md  DEPENDENCY_STRATEGY.md  FEATURES_GUIDE.md  GOOGLE_CALENDAR_ROBOT_SYNC_PLAN.md  MANAGEMENT_QUICK_REF.md  MULTI_ROBOT.md  MULTI_ROBOT_CONFIG.md  QUALITY_GATE_90.md  QUICK_REFERENCE.md  README.md  README.zh-TW.md  ROLLBACK.md  RUNBOOK.md  SECURITY_PATCH.md  SEMANTIC_SHORTCUTS.md  bootstrap_robot.bat  bootstrap_robot.sh  conftest.py  constraints.txt  killall.bat  manage_robots.bat  manage_robots.sh  markitdown_sample.txt  pyproject.toml  rb.bat  rd.bat  robot.py  robotctl.js  robotctl.py  rs.bat  shutdown_robot.bat  start_all.bat  start_all.sh  start_robot.bat  (+12 more)
_vendor_teleapp/teleapp/: telegram_gateway.py
_vendor_teleapp/tests/: test_app.py  test_gateway.py  test_supervisor.py
examples/: echo_app.py
robot/: __init__.py  __main__.py  agents.py  app.py  brain.py  calendar_sync.py  config.py  control.py  coordinator.py  diagnostics.py  entry.py  google_calendar.py  hosted_app.py  project_registry.py  projects.py  providers.py  routing.py  security.py  state.py  text.py
scripts/: check_dependency_health.py  check_release_consistency.py  google_calendar_auth.py  install_robotctl_shims.py  robot_control.ps1  setup_env.py
teleapp/: config.py  state.py  supervisor.py  telegram_gateway.py
tests/: test_agents.py  test_brain.py  test_control.py  test_entry.py  test_google_calendar.py  test_providers.py  test_robot_config_flags.py  test_routing.py  test_security.py  test_state.py  test_text.py
