[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot"
version = "0.1.1"
description = "Teleapp-based Telegram task and agent router"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
  "teleapp>=0.1.1",
  "markitdown[pdf]>=0.1.5",
]

[project.scripts]
robot = "robot.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["robot*"]
