[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot"
version = "0.1.1"
description = "Teleapp-based Telegram task and agent router"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
  "python-telegram-bot>=22.0",
  "google-api-python-client>=2.170.0",
  "google-auth>=2.40.0",
  "google-auth-oauthlib>=1.2.2",
  "markitdown[pdf]>=0.1.5",
]

[project.scripts]
robot = "robot.entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["robot*", "teleapp*"]
